# pinktrace

./: .gitignore  COPYRIGHT  Makefile.am  NEWS.markdown  TODO.markdown  configure.ac
doc/: Makefile.am  index.markdown
doc/api/: Makefile.am
doc/api/c/: Makefile.am  doxygen.conf.in
examples/c/: pink-simple-strace-freebsd.c  pink-simple-strace-linux.c
include/pinktrace/: abi.h  about.h.in  bitness.h.in  compat.h  decode.h  encode.h  event.h  internal.h  macros.h  name.h  pink.h  read.h  regs.h  socket.h  syscall.h  system.h.in  trace.h  util.h  write.h
include/pinktrace/easy/: attach.h  call.h  callback.h  context.h  error.h  exec.h  func.h  init.h  internal-util.h  internal.h  loop.h  pink.h  process.h  vm.h
python/: TEST_socket.py  TEST_string.py  TEST_syscall.py
python/pinktrace/: Makefile.am  __init__.py.in  pink-python-hacks.h  pink-python-socket.c  pink-python-string.c  pink-python-syscall.c  pink-python-trace.c
ruby/: Makefile.am  TEST_socket_address_freebsd.rb  TEST_socket_address_linux.rb  TEST_socket_linux.rb  TEST_string_freebsd.rb  TEST_string_linux.rb  TEST_syscall_freebsd.rb  TEST_syscall_linux.rb  globals.h  init.c  socket.c  string.c  trace.c
src/: Makefile.am  abi.c  event.c  pink-bitness.c  pink-freebsd-trace-amd64.c  pink-freebsd-trace-i386.c  pink-linux-trace-arm.c  pink-linux-trace-ia64.c  pink-linux-trace-powerpc.c  pink-linux-trace-x86.c  pink-linux-trace-x86_64.c  pinktrace-check.c  pinktrace-check.h  read-TEST.c  read.c  socket-TEST.c  socket.c  syscall.c  write-TEST.c  write.c
src/easy/: Makefile.am  attach.c  call.c  callback.c  context.c  error.c  exec.c  loop.c  pink-easy-attach.c  pink-easy-call.c  pink-easy-callback.c  pink-easy-context.c  pink-easy-exec.c  pink-easy-internal.c  pink-easy-loop.c  pink-easy-process.c  pink-easy-vm.c  process.c
tests/: Makefile.am  check_freebsd_decode.c  check_freebsd_util.c  check_linux_decode.c  check_linux_util.c  check_pinktrace.h  main.c
tests/easy/: Makefile.am  t01-exit-genuine.c  t02-exit-signal.c  t03-signal.c  t04-pre-exit.c  t05-pre-exit-signal.c
